Update with Video

--- a/forms/membership.html
+++ b/forms/membership.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri May 25 2018 14:53:33 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat May 26 2018 02:43:19 GMT+0000 (UTC)  -->
 <html data-wf-page="5a10aacad85f4b0001a549ff" data-wf-site="5a10aacad85f4b0001a549e9">
 <head>
   <meta charset="utf-8">
@@ -22,7 +22,7 @@
   <div id="menu" data-ix="arrow-reveal" class="hero-section">
     <div class="hero-container w-container">
       <div class="hero-wrapper">
-        <div class="menu-wrapper"><a href="../index.html" class="menu-link">Home</a><a href="http://west-county-youth-group.webflow.io/#why" class="menu-link">about us</a><a href="../database/member-directory.html" class="menu-link">Members</a><a href="../forms/lessons.html" class="menu-link">Our Lessons</a><a href="../newsletter.html" class="menu-link last-link">Newsletter</a></div><a href="../index.html" class="logo-wrapper w-inline-block"><img src="../images/westcounty-youthgroup-logo-long.svg" class="logo"></a></div>
+        <div class="menu-wrapper"><a href="../index.html" class="menu-link">Home</a><a href="http://west-county-youth-group.webflow.io/#why" class="menu-link">about us</a><a href="../database/member-directory.html" class="menu-link">Members</a><a href="../forms/lessons.html" class="menu-link">Our Lessons</a></div><a href="../index.html" class="logo-wrapper w-inline-block"><img src="../images/westcounty-youthgroup-logo-long.svg" class="logo"></a></div>
     </div>
   </div>
   <div class="about-section">
