--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri May 25 2018 14:53:33 GMT+0000 (UTC)  -->
+<!--  Last Published: Sat May 26 2018 02:43:19 GMT+0000 (UTC)  -->
 <html data-wf-page="5a10aacad85f4b0001a54a00" data-wf-site="5a10aacad85f4b0001a549e9">
 <head>
   <meta charset="utf-8">
@@ -21,7 +21,7 @@
   <div id="menu" data-ix="arrow-reveal" class="hero-section">
     <div class="hero-container w-container">
       <div class="hero-wrapper">
-        <div class="menu-wrapper"><a href="index.html" class="menu-link w--current">Home</a><a href="#why" class="menu-link">about us</a><a href="database/member-directory.html" class="menu-link">Members</a><a href="forms/lessons.html" class="menu-link">Our Lesson</a><a href="newsletter.html" class="menu-link last-link">Newsletter</a></div><a href="index.html" class="logo-wrapper w-inline-block w--current"><img src="images/westcounty-youthgroup-logo-long.svg" class="logo"></a></div>
+        <div class="menu-wrapper"><a href="index.html" class="menu-link w--current">Home</a><a href="#why" class="menu-link">about us</a><a href="database/member-directory.html" class="menu-link">Members</a><a href="forms/lessons.html" class="menu-link">Our Lesson</a></div><a href="index.html" class="logo-wrapper w-inline-block w--current"><img src="images/westcounty-youthgroup-logo-long.svg" class="logo"></a></div>
     </div>
   </div>
   <div class="about-section">
@@ -31,28 +31,22 @@
   </div>
   <div class="body-section">
     <div class="w-container">
-      <h2 class="heading-2">Latest from newsletter</h2>
+      <h2 class="heading-2">Latest from Our Videos</h2>
       <div class="collection-wrapper">
-        <div class="w-dyn-list">
-          <div class="newsletter-list w-dyn-items w-row">
-            <div data-ix="fade-on-scroll" class="newsletter-collection w-dyn-item w-col w-col-6">
-              <a class="newsletter-item w-inline-block">
-                <div class="newsletter-blurb-wrapper">
-                  <div>
-                    <div class="newsletter-category"></div>
-                    <div class="newsletter-blurb-title"></div>
-                  </div>
-                </div>
-                <div class="newsletter-gradient"></div>
-              </a>
-            </div>
-          </div>
-          <div class="w-dyn-empty">
-            <div>No items found.</div>
-          </div>
-        </div>
+        <div data-autoplay="true" data-loop="true" data-wf-ignore="true" data-poster-url="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-poster-00001.jpg" data-video-urls="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-transcode.webm,https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-transcode.mp4" class="c-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-poster-00001.jpg&quot;)" muted="" data-wf-ignore="true"><source src="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-transcode.webm" data-wf-ignore="true"><source src="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-transcode.mp4" data-wf-ignore="true"></video><a href="#" class="w-inline-block w-lightbox"><img src="https://uploads-ssl.webflow.com/5aff2f8edfaededc57ff41df/5b084e23ec5024dbb61e6158_play-icon.svg" class="c-video-icon"><script type="application/json" class="w-json">{
+  "items": [
+    {
+      "type": "video",
+      "originalUrl": "https://www.youtube.com/watch?v=WMAZra4oks8",
+      "url": "https://www.youtube.com/watch?v=WMAZra4oks8",
+      "html": "<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2FWMAZra4oks8%3Ffeature%3Doembed&url=http%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DWMAZra4oks8&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2FWMAZra4oks8%2Fhqdefault.jpg&key=96f1f04c5f4143bcb0f2e68c87d65feb&type=text%2Fhtml&schema=youtube\" width=\"940\" height=\"528\" scrolling=\"no\" frameborder=\"0\" allowfullscreen></iframe>",
+      "thumbnailUrl": "https://i.ytimg.com/vi/WMAZra4oks8/hqdefault.jpg",
+      "width": 940,
+      "height": 528
+    }
+  ]
+}</script></a></div>
       </div>
-      <div class="collection-more-wrapper center"><a href="newsletter.html" class="newsletter-more-button w-button">show all</a></div>
     </div>
   </div>
   <div id="why" class="why-section">
