--- a/database/member-directory.html
+++ b/database/member-directory.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Fri Jun 22 2018 14:59:04 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Jun 27 2018 01:04:07 GMT+0000 (UTC)  -->
 <html data-wf-page="5a10aacad85f4b0001a549fe" data-wf-site="5a10aacad85f4b0001a549e9">
 <head>
   <meta charset="utf-8">
@@ -22,7 +22,7 @@
   <div id="menu" data-ix="arrow-reveal" class="hero-section">
     <div class="hero-container w-container">
       <div class="hero-wrapper">
-        <div class="menu-wrapper"><a href="../index.html" class="menu-link">Home</a><a href="http://west-county-youth-group.webflow.io/#why" class="menu-link">about us</a><a href="../database/member-directory.html" class="menu-link w--current">Members</a><a href="../forms/lessons.html" class="menu-link">Our Lessons</a><a href="../forms/ask-questions.html" class="menu-link">Ask Questions</a></div><a href="../index.html" class="logo-wrapper w-inline-block"><img src="../images/westcounty-youthgroup-logo-long.svg" class="logo"></a></div>
+        <div class="menu-wrapper"><a href="../index.html" class="menu-link">Home</a><a href="http://west-county-youth-group.webflow.io/#why" class="menu-link">about us</a><a href="../database/member-directory.html" class="menu-link w--current">Members</a><a href="../resources.html" class="menu-link">Resources</a><a href="../forms/ask-questions.html" class="menu-link">Ask Questions</a></div><a href="../index.html" class="logo-wrapper w-inline-block"><img src="../images/westcounty-youthgroup-logo-long.svg" class="logo"></a></div>
     </div>
   </div>
   <div class="about-section">
