Update video date and background video

--- a/resource/live-chat.html
+++ b/resource/live-chat.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jun 27 2018 01:04:07 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Jun 27 2018 01:26:05 GMT+0000 (UTC)  -->
 <html data-wf-page="5b32dcff2bf136875d4046c9" data-wf-site="5a10aacad85f4b0001a549e9">
 <head>
   <meta charset="utf-8">
@@ -39,7 +39,7 @@
     <div class="w-container">
       <h2 class="heading-2">Quick Tutorial provided by Carrie Bannigan</h2>
       <div class="collection-wrapper">
-        <div data-autoplay="true" data-loop="true" data-wf-ignore="true" data-poster-url="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-poster-00001.jpg" data-video-urls="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-transcode.webm,https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-transcode.mp4" class="c-video is--live-chat w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-poster-00001.jpg&quot;)" muted="" data-wf-ignore="true"><source src="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-transcode.webm" data-wf-ignore="true"><source src="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b08c844db589c02564249cd_West County Youth group background (1)-transcode.mp4" data-wf-ignore="true"></video><a href="#" class="w-inline-block w-lightbox"><img src="https://uploads-ssl.webflow.com/5aff2f8edfaededc57ff41df/5b084e23ec5024dbb61e6158_play-icon.svg" class="c-video-icon"><script type="application/json" class="w-json">{
+        <div data-autoplay="true" data-loop="true" data-wf-ignore="true" data-poster-url="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b32e58c2bf136e83a404d12_appearin Tutorial For Screen Share  Video Conferencing-poster-00001.jpg" data-video-urls="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b32e58c2bf136e83a404d12_appearin Tutorial For Screen Share  Video Conferencing-transcode.webm,https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b32e58c2bf136e83a404d12_appearin Tutorial For Screen Share  Video Conferencing-transcode.mp4" class="c-video is--live-chat w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b32e58c2bf136e83a404d12_appearin Tutorial For Screen Share  Video Conferencing-poster-00001.jpg&quot;)" muted="" data-wf-ignore="true"><source src="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b32e58c2bf136e83a404d12_appearin Tutorial For Screen Share  Video Conferencing-transcode.webm" data-wf-ignore="true"><source src="https://uploads-ssl.webflow.com/5a10aacad85f4b0001a549e9/5b32e58c2bf136e83a404d12_appearin Tutorial For Screen Share  Video Conferencing-transcode.mp4" data-wf-ignore="true"></video><a href="#" class="w-inline-block w-lightbox"><img src="https://uploads-ssl.webflow.com/5aff2f8edfaededc57ff41df/5b084e23ec5024dbb61e6158_play-icon.svg" class="c-video-icon"><script type="application/json" class="w-json">{
   "items": [
     {
       "type": "video",
@@ -60,7 +60,7 @@
       <h2 class="heading-2">Join the next Study Group</h2>
       <div class="overlay-wrapper">
         <div class="why-content">
-          <p>We&#x27;re a group of young people excited to share our talents with our church family and the community that our church is located in West County.<br><br>This Friday, we will have our first live chat to study Lesson 14</p>
+          <p>We&#x27;re a group of young people excited to share our talents with our church family and the community that our church is located in West County.<br><br>This Friday, we will have our first live chat to study Lesson 13 of Upstream</p>
           <div class="learn-more-button-wrapper"><a href="https://appear.in/westcounty-youthgroup" class="learn-more-button w-button">join IN</a></div>
         </div>
         <div class="why-image-wrapper"><img src="../images/smartmockups_jitbzdgi.png" data-ix="fade-on-scroll" srcset="../images/smartmockups_jitbzdgi.png 500w, ../images/smartmockups_jitbzdgi.png 800w, ../images/smartmockups_jitbzdgi.png 1080w, ../images/smartmockups_jitbzdgi.png 1454w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 95vw, (max-width: 991px) 364px, 470px" class="description-image"></div>
