--- a/resources.html
+++ b/resources.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Jun 27 2018 01:04:07 GMT+0000 (UTC)  -->
+<!--  Last Published: Wed Jun 27 2018 01:26:05 GMT+0000 (UTC)  -->
 <html data-wf-page="5b3002cf275c8c38386af4f0" data-wf-site="5a10aacad85f4b0001a549e9">
 <head>
   <meta charset="utf-8">
@@ -45,6 +45,13 @@
   <div class="footer-section">
     <div class="w-container">
       <div class="footer-logo-wrapper"><img src="images/westcounty-youthgroup-logo.svg" class="footer-logo"></div>
+    </div>
+  </div>
+  <div class="up-arrow-wrapper"><a href="#menu" data-ix="up-arrow" class="up-arrow w-inline-block"><img src="images/up-arrow.svg" class="up-arrow-icon"></a></div>
+  <div data-ix="loading-screen" class="loading-section">
+    <div class="loading-logo-wrapper">
+      <div class="loading-logo-transparent"><img src="images/westcounty-youthgroup-logo.svg" class="loading-logo"></div>
+      <div data-ix="loading-screen" class="loading-logo-opaque"></div>
     </div>
   </div>
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
